--- a/templates/reviews_user_new.htm
+++ b/templates/reviews_user_new.htm
@@ -34,8 +34,7 @@
             <div class="z-formrow">
                 <label for="reviews_review">{gt text='Review'}</label>
                 <textarea id="reviews_review" class="z-form-text" rows="8" name="review[text]" cols="50"></textarea>
-                <em class="z-sub z-formnote">{gt text='If you want multiple pages you can write &lt;!--pagebreak--&gt; where you want to cut.'}<br />
-                {gt text='Your actual review. Please observe proper grammar! Make it at least 100 words, OK? You may also use HTML tags if you know how to use them'}</em>
+                <em class="z-sub z-formnote">{gt text='Please observe proper grammar! Make it at least 100 words, OK? You may also use HTML tags if you know how to use them'}</em>
             </div>
             <div class="z-formrow">
                 <label for="reviews_yourname">{gt text='Your name'}</label>
